# pgsim

./: Cargo.toml  LICENSE.md  Procfile  README.md  config.json  config_knifedruid.json
data/: items.json  skills.json
ge_to_pgsim/: index.js
src/: main.rs
src/parser/: data.rs  mod.rs  tests.rs
src/sim/: mod.rs  systems.rs
web/: buildWebData.js  package-lock.json  package.json  rollup.config.js
web/src/: App.svelte  data.json
