[package]
name = "pgsim"
version = "0.1.0"
authors = ["orakulam <orakulam@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
actix-files = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
legion = "0.3.1"
regex = "1"
strum = "0.20"
strum_macros = "0.20"
rand = "0.5"
